[project]
name = "eip4844-blob-data"
version = "0.3.0"
description = "Dencun blob market analysis and dashboard"
authors = [{ name = "Evan K", email = "ekcopersonal@gmail.com" }]
dependencies = [
    "panel>=1.3.8",
    "polars>=0.20.15",
    "hvplot>=0.9.2",
    "ipykernel>=6.29.3",
    "pyarrow>=15.0.1",
    "jupyter_bokeh>=4.0.0",
    "notebook>=7.1.1",
    "plotly>=5.19.0",
    "bigframes>=0.24.0",
    "ethpandaops_python @ git+https://github.com/primevprotocol/ethpandaops_python",
    "asyncify>=0.10.0",
    "python-dotenv>=1.0.1",
    "nest_asyncio>=1.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eip4844_blob_data"]

[tool.rye.dependencies]
